objects/Feed_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Attribute01__c</fullName>
        <label>Attribute01</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute02__c</fullName>
        <label>Attribute02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute03__c</fullName>
        <label>Attribute03</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Key__c</fullName>
        <description>Holds the general reference for an individual record</description>
        <inlineHelpText>Holds the general reference for an individual record</inlineHelpText>
        <label>Common Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feed Batch</label>
        <referenceTo>Feed_Batch__c</referenceTo>
        <relationshipLabel>Feed Transactions</relationshipLabel>
        <relationshipName>Feed_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feed_Identifier__c</fullName>
        <label>Feed Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <description>Holds the constructed PK for the individual record</description>
        <inlineHelpText>Holds the constructed PK for the individual record</inlineHelpText>
        <label>Primary Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Feed Transaction</label>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Transactions</pluralLabel>
    <recordTypes>
        <fullName>Transaction</fullName>
        <active>true</active>
        <label>Transaction</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>